feat: use dedicated protobuf format for certificate, token, challenge kv data
