# docs/swagger.json
@@ -40,7 +40,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/api.CertificateParams"
+                            "$ref": "#/definitions/models.CertificateParams"
                         }
                     }
                 ],
@@ -48,7 +48,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/certstore.CertMap"
+                            "$ref": "#/definitions/models.CertMap"
                         }
                     },
                     "400": {
@@ -71,6 +71,12 @@
                     },
                     "404": {
                         "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/api.responseErrorJSON"
+                        }
+                    },
+                    "409": {
+                        "description": "Conflict",
                         "schema": {
                             "$ref": "#/definitions/api.responseErrorJSON"
                         }
@@ -119,7 +125,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/api.CertificateParams"
+                            "$ref": "#/definitions/models.CertificateParams"
                         }
                     }
                 ],
@@ -127,7 +133,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/certstore.CertMap"
+                            "$ref": "#/definitions/models.CertMap"
                         }
                     },
                     "400": {
@@ -144,6 +150,12 @@
                     },
                     "403": {
                         "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/api.responseErrorJSON"
+                        }
+                    },
+                    "409": {
+                        "description": "Conflict",
                         "schema": {
                             "$ref": "#/definitions/api.responseErrorJSON"
                         }
@@ -209,12 +221,18 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/certstore.Certificate"
+                                "$ref": "#/definitions/models.Certificate"
                             }
                         }
                     },
                     "404": {
                         "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/api.responseErrorJSON"
+                        }
+                    },
+                    "409": {
+                        "description": "Conflict",
                         "schema": {
                             "$ref": "#/definitions/api.responseErrorJSON"
                         }
@@ -268,7 +286,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/certstore.CertMap"
+                            "$ref": "#/definitions/models.CertMap"
                         }
                     },
                     "400": {
@@ -291,6 +309,12 @@
                     },
                     "404": {
                         "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/api.responseErrorJSON"
+                        }
+                    },
+                    "409": {
+                        "description": "Conflict",
                         "schema": {
                             "$ref": "#/definitions/api.responseErrorJSON"
                         }
@@ -369,6 +393,12 @@
                     },
                     "404": {
                         "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/api.responseErrorJSON"
+                        }
+                    },
+                    "409": {
+                        "description": "Conflict",
                         "schema": {
                             "$ref": "#/definitions/api.responseErrorJSON"
                         }
@@ -613,55 +643,6 @@
         }
     },
     "definitions": {
-        "api.CertificateParams": {
-            "type": "object",
-            "properties": {
-                "bundle": {
-                    "type": "boolean",
-                    "example": false
-                },
-                "csr": {
-                    "type": "string"
-                },
-                "days": {
-                    "type": "integer",
-                    "example": 90
-                },
-                "dns_challenge": {
-                    "type": "string",
-                    "example": "ns1"
-                },
-                "domain": {
-                    "type": "string",
-                    "example": "testfgx.example.com"
-                },
-                "http_challenge": {
-                    "type": "string",
-                    "example": ""
-                },
-                "issuer": {
-                    "type": "string",
-                    "example": "letsencrypt"
-                },
-                "key_type": {
-                    "type": "string"
-                },
-                "labels": {
-                    "type": "string"
-                },
-                "renewal_days": {
-                    "type": "string",
-                    "example": "30"
-                },
-                "revoke": {
-                    "type": "boolean"
-                },
-                "san": {
-                    "type": "string",
-                    "example": ""
-                }
-            }
-        },
         "api.TokenParams": {
             "type": "object",
             "properties": {
@@ -752,12 +733,11 @@
                 }
             }
         },
-        "certstore.CertMap": {
+        "models.CertMap": {
             "type": "object",
             "properties": {
                 "bundle": {
-                    "type": "boolean",
-                    "example": false
+                    "type": "boolean"
                 },
                 "ca_issuer": {
                     "type": "string",
@@ -771,60 +751,57 @@
                     "type": "string"
                 },
                 "days": {
-                    "type": "integer",
-                    "example": 90
+                    "type": "integer"
+                },
+                "deleted_at": {
+                    "description": "Unix timestamp in milliseconds when this entry was marked for deletion.\nReason for doing marking first, and delete later, is to make sure that replica nodes\nwatching the prefix will receive notification on \"marking\" -- at which point they can\nalready remove entry from memory. Actual deletion from KV store does *not* trigger\n\"watch\" notification with a key for all KV stores.",
+                    "type": "integer"
                 },
                 "dns_challenge": {
-                    "type": "string",
-                    "example": "ns1"
+                    "type": "string"
                 },
                 "domain": {
-                    "type": "string",
-                    "example": "testfgx.example.com"
+                    "type": "string"
                 },
                 "encryption": {
                     "type": "string"
                 },
                 "expires": {
-                    "type": "string",
-                    "example": "2025-04-09 09:56:34 +0000 UTC"
+                    "type": "string"
                 },
                 "fingerprint": {
-                    "type": "string",
-                    "example": "3c7bccea1992d5095e7ab8c38f247352cd75ff26cdb95972d34ad54ebcef36af"
+                    "type": "string"
                 },
                 "http_challenge": {
-                    "type": "string",
-                    "example": ""
+                    "type": "string"
                 },
                 "issuer": {
-                    "type": "string",
-                    "example": "letsencrypt"
+                    "type": "string"
                 },
                 "key_type": {
-                    "type": "string",
-                    "example": "ec256"
+                    "type": "string"
                 },
                 "labels": {
                     "type": "string"
                 },
                 "owner": {
-                    "type": "string",
-                    "example": "testfgx"
+                    "type": "string"
                 },
                 "renewal_date": {
                     "type": "string"
                 },
                 "renewal_days": {
-                    "type": "string",
-                    "example": "30"
+                    "type": "string"
                 },
                 "san": {
-                    "type": "string",
-                    "example": ""
+                    "type": "string"
                 },
                 "serial": {
                     "type": "string"
+                },
+                "updated_at": {
+                    "description": "Unix timestamp in milliseconds when we have updated the key.",
+                    "type": "integer"
                 },
                 "url": {
                     "type": "string",
@@ -832,7 +809,71 @@
                 }
             }
         },
-        "certstore.Certificate": {
+        "models.Certificate": {
+            "type": "object",
+            "properties": {
+                "bundle": {
+                    "type": "boolean"
+                },
+                "csr": {
+                    "type": "string"
+                },
+                "days": {
+                    "type": "integer"
+                },
+                "deleted_at": {
+                    "description": "Unix timestamp in milliseconds when this entry was marked for deletion.\nReason for doing marking first, and delete later, is to make sure that replica nodes\nwatching the prefix will receive notification on \"marking\" -- at which point they can\nalready remove entry from memory. Actual deletion from KV store does *not* trigger\n\"watch\" notification with a key for all KV stores.",
+                    "type": "integer"
+                },
+                "dns_challenge": {
+                    "type": "string"
+                },
+                "domain": {
+                    "type": "string"
+                },
+                "encryption": {
+                    "type": "string"
+                },
+                "expires": {
+                    "type": "string"
+                },
+                "fingerprint": {
+                    "type": "string"
+                },
+                "http_challenge": {
+                    "type": "string"
+                },
+                "issuer": {
+                    "type": "string"
+                },
+                "key_type": {
+                    "type": "string"
+                },
+                "labels": {
+                    "type": "string"
+                },
+                "owner": {
+                    "type": "string"
+                },
+                "renewal_date": {
+                    "type": "string"
+                },
+                "renewal_days": {
+                    "type": "string"
+                },
+                "san": {
+                    "type": "string"
+                },
+                "serial": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "description": "Unix timestamp in milliseconds when we have updated the key.",
+                    "type": "integer"
+                }
+            }
+        },
+        "models.CertificateParams": {
             "type": "object",
             "properties": {
                 "bundle": {
@@ -854,17 +895,6 @@
                     "type": "string",
                     "example": "testfgx.example.com"
                 },
-                "encryption": {
-                    "type": "string"
-                },
-                "expires": {
-                    "type": "string",
-                    "example": "2025-04-09 09:56:34 +0000 UTC"
-                },
-                "fingerprint": {
-                    "type": "string",
-                    "example": "3c7bccea1992d5095e7ab8c38f247352cd75ff26cdb95972d34ad54ebcef36af"
-                },
                 "http_challenge": {
                     "type": "string",
                     "example": ""
@@ -874,29 +904,21 @@
                     "example": "letsencrypt"
                 },
                 "key_type": {
-                    "type": "string",
-                    "example": "ec256"
-                },
-                "labels": {
                     "type": "string"
                 },
-                "owner": {
-                    "type": "string",
-                    "example": "testfgx"
-                },
-                "renewal_date": {
+                "labels": {
                     "type": "string"
                 },
                 "renewal_days": {
                     "type": "string",
                     "example": "30"
                 },
+                "revoke": {
+                    "type": "boolean"
+                },
                 "san": {
                     "type": "string",
                     "example": ""
-                },
-                "serial": {
-                    "type": "string"
                 }
             }
         }
