# models/token.pb.go
@@ -1,0 +1,557 @@
+// Code generated by protoc-gen-gogo. DO NOT EDIT.
+// source: models/token.proto
+
+package models
+
+import (
+	fmt "fmt"
+	_ "github.com/gogo/protobuf/gogoproto"
+	proto "github.com/gogo/protobuf/proto"
+	io "io"
+	math "math"
+	math_bits "math/bits"
+)
+
+// Reference imports to suppress errors if they are not otherwise used.
+var _ = proto.Marshal
+var _ = fmt.Errorf
+var _ = math.Inf
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the proto package it is being compiled against.
+// A compilation error at this line likely means your copy of the
+// proto package needs to be updated.
+const _ = proto.GoGoProtoPackageIsVersion3 // please upgrade the proto package
+
+type Token struct {
+	TokenHash string   `protobuf:"bytes,1,opt,name=tokenHash,proto3" json:"tokenHash,omitempty"`
+	Scope     []string `protobuf:"bytes,2,rep,name=scope,proto3" json:"scope,omitempty"`
+	Username  string   `protobuf:"bytes,3,opt,name=username,proto3" json:"username,omitempty"`
+	Expires   string   `protobuf:"bytes,4,opt,name=expires,proto3" json:"expires,omitempty"`
+	Duration  string   `protobuf:"bytes,5,opt,name=duration,proto3" json:"duration,omitempty"`
+	// Unix timestamp in milliseconds when we have updated the key.
+	UpdatedAt int64 `protobuf:"varint,6,opt,name=updated_at,json=updatedAt,proto3" json:"updated_at,omitempty"`
+	// Unix timestamp in milliseconds when this entry was marked for deletion.
+	// Reason for doing marking first, and delete later, is to make sure that replica nodes
+	// watching the prefix will receive notification on "marking" -- at which point they can
+	// already remove entry from memory. Actual deletion from KV store does *not* trigger
+	// "watch" notification with a key for all KV stores.
+	DeletedAt int64 `protobuf:"varint,7,opt,name=deleted_at,json=deletedAt,proto3" json:"deleted_at,omitempty"`
+}
+
+func (m *Token) Reset()         { *m = Token{} }
+func (m *Token) String() string { return proto.CompactTextString(m) }
+func (*Token) ProtoMessage()    {}
+func (*Token) Descriptor() ([]byte, []int) {
+	return fileDescriptor_6cc1d10c41caeb60, []int{0}
+}
+func (m *Token) XXX_Unmarshal(b []byte) error {
+	return m.Unmarshal(b)
+}
+func (m *Token) XXX_Marshal(b []byte, deterministic bool) ([]byte, error) {
+	if deterministic {
+		return xxx_messageInfo_Token.Marshal(b, m, deterministic)
+	} else {
+		b = b[:cap(b)]
+		n, err := m.MarshalToSizedBuffer(b)
+		if err != nil {
+			return nil, err
+		}
+		return b[:n], nil
+	}
+}
+func (m *Token) XXX_Merge(src proto.Message) {
+	xxx_messageInfo_Token.Merge(m, src)
+}
+func (m *Token) XXX_Size() int {
+	return m.Size()
+}
+func (m *Token) XXX_DiscardUnknown() {
+	xxx_messageInfo_Token.DiscardUnknown(m)
+}
+
+var xxx_messageInfo_Token proto.InternalMessageInfo
+
+func init() {
+	proto.RegisterType((*Token)(nil), "models.Token")
+}
+
+func init() { proto.RegisterFile("models/token.proto", fileDescriptor_6cc1d10c41caeb60) }
+
+var fileDescriptor_6cc1d10c41caeb60 = []byte{
+	// 262 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x44, 0x90, 0xbf, 0x4e, 0xf3, 0x30,
+	0x14, 0x47, 0xe3, 0x2f, 0x5f, 0x52, 0xe2, 0xd1, 0xea, 0x60, 0x55, 0x60, 0x45, 0x4c, 0x61, 0x69,
+	0x06, 0x9e, 0xa0, 0x2c, 0x30, 0x47, 0x4c, 0x2c, 0x95, 0x9b, 0x5c, 0xd2, 0x88, 0x26, 0x37, 0xf2,
+	0x1f, 0xa9, 0x8f, 0xc1, 0x63, 0x55, 0x62, 0xe9, 0xc8, 0x08, 0xc9, 0x8b, 0xa0, 0xd8, 0x29, 0x6c,
+	0xfe, 0x9d, 0xe3, 0xb3, 0x5c, 0xca, 0x5a, 0xac, 0xe0, 0xa0, 0x73, 0x83, 0x6f, 0xd0, 0xad, 0x7b,
+	0x85, 0x06, 0x59, 0xec, 0xd9, 0x6a, 0x59, 0x63, 0x8d, 0x0e, 0xe5, 0xd3, 0xcb, 0xdb, 0xdb, 0x0f,
+	0x42, 0xa3, 0xe7, 0xe9, 0x37, 0xbb, 0xa6, 0x89, 0xcb, 0x9e, 0xa4, 0xde, 0x73, 0x92, 0x92, 0x2c,
+	0x29, 0xfe, 0x00, 0x5b, 0xd2, 0x48, 0x97, 0xd8, 0x03, 0xff, 0x97, 0x86, 0x59, 0x52, 0xf8, 0xc1,
+	0x56, 0xf4, 0xca, 0x6a, 0x50, 0x9d, 0x6c, 0x81, 0x87, 0x2e, 0xf9, 0xdd, 0x8c, 0xd3, 0x05, 0x1c,
+	0xfb, 0x46, 0x81, 0xe6, 0xff, 0x9d, 0xba, 0xcc, 0xa9, 0xaa, 0xac, 0x92, 0xa6, 0xc1, 0x8e, 0x47,
+	0xbe, 0xba, 0x6c, 0x76, 0x43, 0xa9, 0xed, 0x2b, 0x69, 0xa0, 0xda, 0x4a, 0xc3, 0xe3, 0x94, 0x64,
+	0x61, 0x91, 0xcc, 0x64, 0x63, 0x26, 0x5d, 0xc1, 0x01, 0x66, 0xbd, 0xf0, 0x7a, 0x26, 0x1b, 0xf3,
+	0xf0, 0x78, 0xfa, 0x16, 0xc1, 0x69, 0x10, 0xe4, 0x3c, 0x08, 0xf2, 0x35, 0x08, 0xf2, 0x3e, 0x8a,
+	0xe0, 0x3c, 0x8a, 0xe0, 0x73, 0x14, 0xc1, 0xcb, 0x5d, 0xdd, 0x98, 0xbd, 0xdd, 0xad, 0x4b, 0x6c,
+	0xf3, 0xd7, 0x1a, 0xad, 0x01, 0x85, 0xf6, 0x98, 0xcb, 0xb2, 0x85, 0x6d, 0x2b, 0x3b, 0x59, 0x83,
+	0xca, 0xfd, 0xb1, 0x76, 0xb1, 0xbb, 0xce, 0xfd, 0x4f, 0x00, 0x00, 0x00, 0xff, 0xff, 0x5f, 0xc4,
+	0x05, 0x34, 0x51, 0x01, 0x00, 0x00,
+}
+
+func (m *Token) Marshal() (dAtA []byte, err error) {
+	size := m.Size()
+	dAtA = make([]byte, size)
+	n, err := m.MarshalToSizedBuffer(dAtA[:size])
+	if err != nil {
+		return nil, err
+	}
+	return dAtA[:n], nil
+}
+
+func (m *Token) MarshalTo(dAtA []byte) (int, error) {
+	size := m.Size()
+	return m.MarshalToSizedBuffer(dAtA[:size])
+}
+
+func (m *Token) MarshalToSizedBuffer(dAtA []byte) (int, error) {
+	i := len(dAtA)
+	_ = i
+	var l int
+	_ = l
+	if m.DeletedAt != 0 {
+		i = encodeVarintToken(dAtA, i, uint64(m.DeletedAt))
+		i--
+		dAtA[i] = 0x38
+	}
+	if m.UpdatedAt != 0 {
+		i = encodeVarintToken(dAtA, i, uint64(m.UpdatedAt))
+		i--
+		dAtA[i] = 0x30
+	}
+	if len(m.Duration) > 0 {
+		i -= len(m.Duration)
+		copy(dAtA[i:], m.Duration)
+		i = encodeVarintToken(dAtA, i, uint64(len(m.Duration)))
+		i--
+		dAtA[i] = 0x2a
+	}
+	if len(m.Expires) > 0 {
+		i -= len(m.Expires)
+		copy(dAtA[i:], m.Expires)
+		i = encodeVarintToken(dAtA, i, uint64(len(m.Expires)))
+		i--
+		dAtA[i] = 0x22
+	}
+	if len(m.Username) > 0 {
+		i -= len(m.Username)
+		copy(dAtA[i:], m.Username)
+		i = encodeVarintToken(dAtA, i, uint64(len(m.Username)))
+		i--
+		dAtA[i] = 0x1a
+	}
+	if len(m.Scope) > 0 {
+		for iNdEx := len(m.Scope) - 1; iNdEx >= 0; iNdEx-- {
+			i -= len(m.Scope[iNdEx])
+			copy(dAtA[i:], m.Scope[iNdEx])
+			i = encodeVarintToken(dAtA, i, uint64(len(m.Scope[iNdEx])))
+			i--
+			dAtA[i] = 0x12
+		}
+	}
+	if len(m.TokenHash) > 0 {
+		i -= len(m.TokenHash)
+		copy(dAtA[i:], m.TokenHash)
+		i = encodeVarintToken(dAtA, i, uint64(len(m.TokenHash)))
+		i--
+		dAtA[i] = 0xa
+	}
+	return len(dAtA) - i, nil
+}
+
+func encodeVarintToken(dAtA []byte, offset int, v uint64) int {
+	offset -= sovToken(v)
+	base := offset
+	for v >= 1<<7 {
+		dAtA[offset] = uint8(v&0x7f | 0x80)
+		v >>= 7
+		offset++
+	}
+	dAtA[offset] = uint8(v)
+	return base
+}
+func (m *Token) Size() (n int) {
+	if m == nil {
+		return 0
+	}
+	var l int
+	_ = l
+	l = len(m.TokenHash)
+	if l > 0 {
+		n += 1 + l + sovToken(uint64(l))
+	}
+	if len(m.Scope) > 0 {
+		for _, s := range m.Scope {
+			l = len(s)
+			n += 1 + l + sovToken(uint64(l))
+		}
+	}
+	l = len(m.Username)
+	if l > 0 {
+		n += 1 + l + sovToken(uint64(l))
+	}
+	l = len(m.Expires)
+	if l > 0 {
+		n += 1 + l + sovToken(uint64(l))
+	}
+	l = len(m.Duration)
+	if l > 0 {
+		n += 1 + l + sovToken(uint64(l))
+	}
+	if m.UpdatedAt != 0 {
+		n += 1 + sovToken(uint64(m.UpdatedAt))
+	}
+	if m.DeletedAt != 0 {
+		n += 1 + sovToken(uint64(m.DeletedAt))
+	}
+	return n
+}
+
+func sovToken(x uint64) (n int) {
+	return (math_bits.Len64(x|1) + 6) / 7
+}
+func sozToken(x uint64) (n int) {
+	return sovToken(uint64((x << 1) ^ uint64((int64(x) >> 63))))
+}
+func (m *Token) Unmarshal(dAtA []byte) error {
+	l := len(dAtA)
+	iNdEx := 0
+	for iNdEx < l {
+		preIndex := iNdEx
+		var wire uint64
+		for shift := uint(0); ; shift += 7 {
+			if shift >= 64 {
+				return ErrIntOverflowToken
+			}
+			if iNdEx >= l {
+				return io.ErrUnexpectedEOF
+			}
+			b := dAtA[iNdEx]
+			iNdEx++
+			wire |= uint64(b&0x7F) << shift
+			if b < 0x80 {
+				break
+			}
+		}
+		fieldNum := int32(wire >> 3)
+		wireType := int(wire & 0x7)
+		if wireType == 4 {
+			return fmt.Errorf("proto: Token: wiretype end group for non-group")
+		}
+		if fieldNum <= 0 {
+			return fmt.Errorf("proto: Token: illegal tag %d (wire type %d)", fieldNum, wire)
+		}
+		switch fieldNum {
+		case 1:
+			if wireType != 2 {
+				return fmt.Errorf("proto: wrong wireType = %d for field TokenHash", wireType)
+			}
+			var stringLen uint64
+			for shift := uint(0); ; shift += 7 {
+				if shift >= 64 {
+					return ErrIntOverflowToken
+				}
+				if iNdEx >= l {
+					return io.ErrUnexpectedEOF
+				}
+				b := dAtA[iNdEx]
+				iNdEx++
+				stringLen |= uint64(b&0x7F) << shift
+				if b < 0x80 {
+					break
+				}
+			}
+			intStringLen := int(stringLen)
+			if intStringLen < 0 {
+				return ErrInvalidLengthToken
+			}
+			postIndex := iNdEx + intStringLen
+			if postIndex < 0 {
+				return ErrInvalidLengthToken
+			}
+			if postIndex > l {
+				return io.ErrUnexpectedEOF
+			}
+			m.TokenHash = string(dAtA[iNdEx:postIndex])
+			iNdEx = postIndex
+		case 2:
+			if wireType != 2 {
+				return fmt.Errorf("proto: wrong wireType = %d for field Scope", wireType)
+			}
+			var stringLen uint64
+			for shift := uint(0); ; shift += 7 {
+				if shift >= 64 {
+					return ErrIntOverflowToken
+				}
+				if iNdEx >= l {
+					return io.ErrUnexpectedEOF
+				}
+				b := dAtA[iNdEx]
+				iNdEx++
+				stringLen |= uint64(b&0x7F) << shift
+				if b < 0x80 {
+					break
+				}
+			}
+			intStringLen := int(stringLen)
+			if intStringLen < 0 {
+				return ErrInvalidLengthToken
+			}
+			postIndex := iNdEx + intStringLen
+			if postIndex < 0 {
+				return ErrInvalidLengthToken
+			}
+			if postIndex > l {
+				return io.ErrUnexpectedEOF
+			}
+			m.Scope = append(m.Scope, string(dAtA[iNdEx:postIndex]))
+			iNdEx = postIndex
+		case 3:
+			if wireType != 2 {
+				return fmt.Errorf("proto: wrong wireType = %d for field Username", wireType)
+			}
+			var stringLen uint64
+			for shift := uint(0); ; shift += 7 {
+				if shift >= 64 {
+					return ErrIntOverflowToken
+				}
+				if iNdEx >= l {
+					return io.ErrUnexpectedEOF
+				}
+				b := dAtA[iNdEx]
+				iNdEx++
+				stringLen |= uint64(b&0x7F) << shift
+				if b < 0x80 {
+					break
+				}
+			}
+			intStringLen := int(stringLen)
+			if intStringLen < 0 {
+				return ErrInvalidLengthToken
+			}
+			postIndex := iNdEx + intStringLen
+			if postIndex < 0 {
+				return ErrInvalidLengthToken
+			}
+			if postIndex > l {
+				return io.ErrUnexpectedEOF
+			}
+			m.Username = string(dAtA[iNdEx:postIndex])
+			iNdEx = postIndex
+		case 4:
+			if wireType != 2 {
+				return fmt.Errorf("proto: wrong wireType = %d for field Expires", wireType)
+			}
+			var stringLen uint64
+			for shift := uint(0); ; shift += 7 {
+				if shift >= 64 {
+					return ErrIntOverflowToken
+				}
+				if iNdEx >= l {
+					return io.ErrUnexpectedEOF
+				}
+				b := dAtA[iNdEx]
+				iNdEx++
+				stringLen |= uint64(b&0x7F) << shift
+				if b < 0x80 {
+					break
+				}
+			}
+			intStringLen := int(stringLen)
+			if intStringLen < 0 {
+				return ErrInvalidLengthToken
+			}
+			postIndex := iNdEx + intStringLen
+			if postIndex < 0 {
+				return ErrInvalidLengthToken
+			}
+			if postIndex > l {
+				return io.ErrUnexpectedEOF
+			}
+			m.Expires = string(dAtA[iNdEx:postIndex])
+			iNdEx = postIndex
+		case 5:
+			if wireType != 2 {
+				return fmt.Errorf("proto: wrong wireType = %d for field Duration", wireType)
+			}
+			var stringLen uint64
+			for shift := uint(0); ; shift += 7 {
+				if shift >= 64 {
+					return ErrIntOverflowToken
+				}
+				if iNdEx >= l {
+					return io.ErrUnexpectedEOF
+				}
+				b := dAtA[iNdEx]
+				iNdEx++
+				stringLen |= uint64(b&0x7F) << shift
+				if b < 0x80 {
+					break
+				}
+			}
+			intStringLen := int(stringLen)
+			if intStringLen < 0 {
+				return ErrInvalidLengthToken
+			}
+			postIndex := iNdEx + intStringLen
+			if postIndex < 0 {
+				return ErrInvalidLengthToken
+			}
+			if postIndex > l {
+				return io.ErrUnexpectedEOF
+			}
+			m.Duration = string(dAtA[iNdEx:postIndex])
+			iNdEx = postIndex
+		case 6:
+			if wireType != 0 {
+				return fmt.Errorf("proto: wrong wireType = %d for field UpdatedAt", wireType)
+			}
+			m.UpdatedAt = 0
+			for shift := uint(0); ; shift += 7 {
+				if shift >= 64 {
+					return ErrIntOverflowToken
+				}
+				if iNdEx >= l {
+					return io.ErrUnexpectedEOF
+				}
+				b := dAtA[iNdEx]
+				iNdEx++
+				m.UpdatedAt |= int64(b&0x7F) << shift
+				if b < 0x80 {
+					break
+				}
+			}
+		case 7:
+			if wireType != 0 {
+				return fmt.Errorf("proto: wrong wireType = %d for field DeletedAt", wireType)
+			}
+			m.DeletedAt = 0
+			for shift := uint(0); ; shift += 7 {
+				if shift >= 64 {
+					return ErrIntOverflowToken
+				}
+				if iNdEx >= l {
+					return io.ErrUnexpectedEOF
+				}
+				b := dAtA[iNdEx]
+				iNdEx++
+				m.DeletedAt |= int64(b&0x7F) << shift
+				if b < 0x80 {
+					break
+				}
+			}
+		default:
+			iNdEx = preIndex
+			skippy, err := skipToken(dAtA[iNdEx:])
+			if err != nil {
+				return err
+			}
+			if (skippy < 0) || (iNdEx+skippy) < 0 {
+				return ErrInvalidLengthToken
+			}
+			if (iNdEx + skippy) > l {
+				return io.ErrUnexpectedEOF
+			}
+			iNdEx += skippy
+		}
+	}
+
+	if iNdEx > l {
+		return io.ErrUnexpectedEOF
+	}
+	return nil
+}
+func skipToken(dAtA []byte) (n int, err error) {
+	l := len(dAtA)
+	iNdEx := 0
+	depth := 0
+	for iNdEx < l {
+		var wire uint64
+		for shift := uint(0); ; shift += 7 {
+			if shift >= 64 {
+				return 0, ErrIntOverflowToken
+			}
+			if iNdEx >= l {
+				return 0, io.ErrUnexpectedEOF
+			}
+			b := dAtA[iNdEx]
+			iNdEx++
+			wire |= (uint64(b) & 0x7F) << shift
+			if b < 0x80 {
+				break
+			}
+		}
+		wireType := int(wire & 0x7)
+		switch wireType {
+		case 0:
+			for shift := uint(0); ; shift += 7 {
+				if shift >= 64 {
+					return 0, ErrIntOverflowToken
+				}
+				if iNdEx >= l {
+					return 0, io.ErrUnexpectedEOF
+				}
+				iNdEx++
+				if dAtA[iNdEx-1] < 0x80 {
+					break
+				}
+			}
+		case 1:
+			iNdEx += 8
+		case 2:
+			var length int
+			for shift := uint(0); ; shift += 7 {
+				if shift >= 64 {
+					return 0, ErrIntOverflowToken
+				}
+				if iNdEx >= l {
+					return 0, io.ErrUnexpectedEOF
+				}
+				b := dAtA[iNdEx]
+				iNdEx++
+				length |= (int(b) & 0x7F) << shift
+				if b < 0x80 {
+					break
+				}
+			}
+			if length < 0 {
+				return 0, ErrInvalidLengthToken
+			}
+			iNdEx += length
+		case 3:
+			depth++
+		case 4:
+			if depth == 0 {
+				return 0, ErrUnexpectedEndOfGroupToken
+			}
+			depth--
+		case 5:
+			iNdEx += 4
+		default:
+			return 0, fmt.Errorf("proto: illegal wireType %d", wireType)
+		}
+		if iNdEx < 0 {
+			return 0, ErrInvalidLengthToken
+		}
+		if depth == 0 {
+			return iNdEx, nil
+		}
+	}
+	return 0, io.ErrUnexpectedEOF
+}
+
+var (
+	ErrInvalidLengthToken        = fmt.Errorf("proto: negative length found during unmarshaling")
+	ErrIntOverflowToken          = fmt.Errorf("proto: integer overflow")
+	ErrUnexpectedEndOfGroupToken = fmt.Errorf("proto: unexpected end of group")
+)
